--- a/css/index.css
+++ b/css/index.css
@@ -15,5 +15,88 @@
     display: inline;
 }
   
-
+/* Shows color list when hovering over color menu */
 #color-menu:hover #colors-list {display: block;}
+
+/*====== Styling Site ======*/
+/*=== Global Changes ===*/
+
+body {
+    background-image: url(/images/canvas-background.jpg);
+    margin: 0;
+    padding: 0;
+}
+/*=== Header (Grid Manipulation Options) Changes ===*/
+header {
+    background-image: url(/images/brick-background.jpeg);
+    border-radius: 50px;
+    width: 80%;
+    height: fit-content;
+    display: flex;
+    margin: 2% auto 20px auto;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border: black 1px solid;
+}
+
+.grid-manipulation-buttons {
+    background-image: url(/images/gear-background.jpg);
+    border-radius: 5px;
+    display: inline;
+    margin: 10px;
+    height: 50px;
+    width: 200px;
+    border: solid black 2px;
+    color: blanchedalmond;
+    font-size: 16px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.grid-manipulation-buttons:active {
+    top: 2px;
+    left: 1px;
+    box-shadow: none;
+}
+
+/*=== Footer (Color Manipulation Options) Changes ===*/
+footer {
+    background-image: url(/images/brick-background.jpeg);
+    border-radius: 50px;
+    width: 80%;
+    height: fit-content;
+    display: flex;
+    background-color: rebeccapurple;
+    margin: 20px auto 2% auto;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border: black 1px solid;
+}
+
+.paint-manipulation-buttons {
+    border-radius: 3px;
+    display: inline;
+    margin: 10px;
+    height: 50px;
+    width: 200px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    background-image: url(/images/desk-background.jpg);
+}
+
+.paint-manipulation-buttons:active {
+    top: 2px;
+    left: 1px;
+    box-shadow: none;
+}
+
+/*=== Main (Painting Area) Changes ===*/
+main {
+    height: 632px;
+    width: 80%;
+    border: black 2px solid;
+    margin: 0 auto;
+    position: block;
+}
+
