--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,3 @@
-/*====== Color Dropdown Menu Logic ======*/
-
-#color-menu {
-    position: relative;
-    display: inline-block;
-}
-
-#colors-list {
-    display: none;
-    position: absolute;
-    z-index: 1;
-}
-
-.color-btns {
-    display: inline;
-}
-  
-/* Shows color list when hovering over color menu */
-#color-menu:hover #colors-list {display: block;}
-
 /*====== Styling Site ======*/
 /*=== Global Changes ===*/
 
@@ -82,6 +62,10 @@ footer {
     height: 50px;
     width: 200px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    border: darkolivegreen 2px groove;
+    color: brown;
+    font-size: 16px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-image: url(/images/desk-background.jpg);
 }
 
@@ -90,6 +74,31 @@ footer {
     left: 1px;
     box-shadow: none;
 }
+
+/*= Color Dropdown Menu Logic and Style =*/
+
+#color-menu {
+    position: relative;
+    display: inline-block;
+}
+
+#colors-list {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    margin: 10px;
+    background-color: darkolivegreen;
+    height: 300px;
+}
+
+.color-btns {
+    display: block;
+}
+  
+/* Shows color list when hovering over color menu */
+#color-menu:hover #colors-list {display: block;}
+
 
 /*=== Main (Painting Area) Changes ===*/
 main {
