--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,6 @@ footer {
     z-index: 1;
     bottom: 100%;
     margin: 10px 10px -10px 10px;
-    background-color: darkolivegreen;
     height: fit-content;
 }
 
@@ -96,8 +95,47 @@ footer {
     display: fixed;
     height: 40px;
     width: 200px;
+    border: black 1px solid;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+.color-btns:active {
+    top: 2px;
+    left: 1px;
+    box-shadow: none;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#red {
+    background-color: red;
+}
+
+#green {
+    background-color: green;
+}
+
+#pink {
+    background-color: pink;
+}
+
+#orange {
+    background-color: orange;
+}
+
+#black {
+    background-color: black;
+}
+
+#white {
+    background-color: white;
+}
+
+#yellow {
+    background-color: yellow;
+}
   
 /* Shows color list when hovering over color menu */
 #color-menu:hover #colors-list {display: block;}
