--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ header {
     color: blanchedalmond;
     font-size: 16px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .grid-manipulation-buttons:active {
@@ -61,7 +61,7 @@ footer {
     margin: 10px;
     height: 50px;
     width: 200px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     border: darkolivegreen 2px groove;
     color: brown;
     font-size: 16px;
@@ -92,11 +92,10 @@ footer {
 }
 
 .color-btns {
-    display: fixed;
     height: 40px;
     width: 200px;
     border: black 1px solid;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .color-btns:active {
@@ -148,7 +147,6 @@ main {
     width: 80%;
     border: black 2px solid;
     margin: 0 auto;
-    position: block;
     justify-content: center;
     overflow: auto;
 }
